# ddd-cv-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260405_01_add_memory_tables.py
src/: config.py
src/application/memory/: service.py
src/domain/: enums.py
src/domain/memory/: entities.py  repository.py
src/domain/users/: entities.py  repository.py  value-objects.py
src/infrastructure/gpt/: yandex_client.py
src/infrastructure/postgres/: memory_repository.py  session.py  tables.py
src/interfaces/bot/: bot.py  bot_logging.py  constants.py  i18n.py  metrics.py  pyproject.toml  requirement.txt
src/interfaces/bot/handlers/: chat.py
src/interfaces/bot/keyboards/: main.py
src/interfaces/bot/middleware/: action.py  throttling.py
src/interfaces/bot/services/: load_resume.py  telegram_format.py
